load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "teamcity_proto",
    srcs = ["teamcity.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "teamcity_go_proto",
    importpath = "github.com/robfig/teamcity-skycfg/teamcity",
    proto = ":teamcity_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":teamcity_go_proto"],
    importpath = "github.com/robfig/teamcity-skycfg/teamcity",
    visibility = ["//visibility:public"],
)
